--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ img {
   <form>
     <div class="input-group">
       <div class="input-group-btn">
-        <button onclick="scrollToContainer()" type="button" class="btn btn-danger">Volunteer Now</button>
+        <button onclick="scrollToContainer()" class="btn btn-danger">Volunteer Now</button>
       </div>
     </div>
   </form>
@@ -399,12 +399,12 @@ img {
 <!-- Container (About Section) -->
 <div id="about" class="container-fluid">
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-xs-12 col-sm-8 col-md-10">
       <h2 class="volwhat1">What is Volunteering ?</h2><br>
       <h4 class="volwhat2">Volunteering is an act of selfless service where individuals contribute their time, skills, and resources towards making a positive impact in their communities or in society as a whole. It is a powerful tool for effecting change, promoting social justice, and building stronger, more connected communities.</h4><br>
       <p class="volwhat2">Volunteering can take many forms, from assisting with disaster relief efforts, to tutoring students, to working with animals, to providing support for those in need. It is an opportunity to give back and make a difference, while also gaining valuable experience, building new relationships, and developing a deeper sense of empathy and compassion. By volunteering, individuals can learn about themselves and their communities, develop new skills, and work towards a common goal of creating a better world for everyone. In a world that is increasingly disconnected and divided, volunteering is more important than ever, as it allows us to come together and work towards a shared vision of a better future.</p>
     </div>
-    <div class="col-sm-4">
+    <div class="col-xs-12 col-sm-4 col-md-12">
       <img class="img2" src="https://cdn-icons-png.flaticon.com/512/5256/5256373.png"></span>
     </div>
   </div>
@@ -416,7 +416,7 @@ img {
   </div>
 <hr></hr>
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col-xs-12 col-sm-4 col-md-4">
             <div class="box1">
                 <hr>
                 <h2 class="experiencetitle">My Experience Volunteering with Off To Morocco</h2>
@@ -435,7 +435,7 @@ img {
                 <img class="imageblog1" src="https://offtomorocco.files.wordpress.com/2019/01/img_7238.jpg?w=750">            
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-xs-12 col-sm-4 col-md-4">
             <div class="box1">
                 <hr>
                 <h2 class="experiencetitle">My Experience Being a English Language Teacher</h2>
@@ -457,7 +457,7 @@ img {
                 <img class="imageblog1" src="https://rs.projects-abroad.co.uk/v1/products/community-based-care-rather-than-volunteering-in-orphanages-abroad-product-5dee45616b020.[1090].jpeg">            
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-xs-12 col-sm-4 col-md-4">
             <div class="box1">
                 <hr>
                 <h2 class="experiencetitle">Rewarding Experience</h2>
@@ -487,7 +487,7 @@ img {
       </div>
     <hr></hr>
         <div class="row22">
-            <div class="col-sm-6">
+            <div class="col-xs-12 col-sm-6 col-md-6">
                 <div class="box4">
                     <div class="form-group">
                         <label for="area">What Area Do you Want to Volunteer In ?</label>
@@ -500,7 +500,7 @@ img {
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-xs-12 col-sm-6 col-md-6">
                 <div class="box4">
                     <div class="form-group">
                         <label for="type">What Type of Volunteering Job Do you Want to Do ?</label>
@@ -553,7 +553,7 @@ img {
 <div id="contact" class="container-fluid bg-grey">
   <h2 class="text-center">Contact</h2>
   <div class="row">
-    <div class="col-sm-5">
+    <div class="col-xs-12 col-sm-5 col-md-5">
       <p><span class="glyphicon glyphicon-map-marker"></span> Casablanca, Morocco</p>
       <p><span class="glyphicon glyphicon-phone"></span> +212 234682462</p>
       <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
